--- a/resources/styles/main.css
+++ b/resources/styles/main.css
@@ -54,7 +54,6 @@ header{
 }
 
 main{
-    min-height: 150vh;
     height: auto;
     margin-top: 5rem;
     padding-top: 1.2rem;
@@ -266,6 +265,58 @@ a:focus{
     position: absolute;
 }
 
+.header__user_menu{
+    background-color: #fff;
+    box-shadow: 0px 0 10px -3px rgb(0 0 0 / 30%);
+    min-width: 100%;
+    width: max-content;
+    height: 0;
+    top: 3rem;
+    padding: 0;
+    justify-self: end;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    box-sizing: border-box;
+    position: fixed;
+    overflow: hidden;
+    z-index: 150;
+    opacity: 0;
+}
+
+.header__user:focus-within ~ .header__user_menu,
+.header__user:active ~ .header__user_menu,
+.header__user_menu:hover,
+.header__user_menu:focus-within{
+    height: auto;
+    padding: 0.5rem 0;
+    opacity: 1;
+}
+
+.header__user_menu__item{
+    width: 100%;
+    display: block;
+}
+
+.header__user_menu__item a,
+.header__user_menu__item span{
+    font-size: 1rem;
+    padding: 0 1rem;
+    line-height: 2.3rem;
+    box-sizing: border-box;
+    user-select: none;
+    display: block;
+}
+
+.header__user_menu__item span{
+    user-select: text;
+}
+
+.header__user_menu__item a:hover,
+.header__user_menu__item a:focus{
+    color: #000;
+    background-color: hsl(250deg 20% 20% / 10%);
+}
+
 .footer__menu{
     width: 100%;
     max-width: 400px;
@@ -293,6 +344,55 @@ a:focus{
     padding: 20%;
     opacity: 0.75;
     box-sizing: border-box;
+}
+
+.footer__user_menu{
+    background-color: white;
+    width: 100%;
+    height: auto;
+    bottom: 100%;
+    box-shadow: 0px 0px 5px 0px rgb(0 0 0 / 5%);
+    position: absolute;
+}
+
+.footer__user_menu.hidden{
+    display: none;
+}
+
+.footer__user_menu__item{
+    width: 100%;
+    display: block;
+}
+
+.footer__user_menu__item a,
+.footer__user_menu__item span{
+    font-size: 1rem;
+    padding: 0 1rem;
+    line-height: 56px;
+    box-sizing: border-box;
+    user-select: none;
+    display: block;
+}
+
+.footer__user_menu__item span{
+    border-bottom: 1px solid rgb(0 0 0 / 20%);
+    border-top: 1px solid rgb(0 0 0 / 20%);
+    user-select: text;
+}
+
+.footer__user_menu__item a:hover,
+.footer__user_menu__item a:focus{
+    color: #000;
+    background-color: hsl(250deg 20% 20% / 10%);
+}
+
+.footer__user_menu__item img{
+    width: 100%;
+    height: 56px;
+    padding: 10px 0;
+    opacity: 0.75;
+    box-sizing: border-box;
+    display: block;
 }
 
 section{
@@ -540,7 +640,8 @@ body .carusel:hover .carusel__control-next:not(.hidden){
     margin-bottom: 1rem;
 }
 
-.auth_page{
+.auth_page,
+.pay_page{
     grid-template-columns: 18rem;
     grid-template-rows: auto;
     row-gap: 4rem;
@@ -548,7 +649,9 @@ body .carusel:hover .carusel__control-next:not(.hidden){
     display: grid;
 }
 
-.auth_page .message{
+.auth_page .message,
+.pay_page .error_message,
+.pay_page .success_message{
     color: #000;
     background-color: #ffe1db;
     width: 100%;
@@ -567,7 +670,14 @@ body .carusel:hover .carusel__control-next:not(.hidden){
     transform: translateX(-50%);
 }
 
-.auth_page .message label{
+.pay_page .success_message{
+    background-color: #dfffdb;
+    border: 1px solid #139108;
+}
+
+.auth_page .message label,
+.pay_page .error_message label,
+.pay_page .success_message label{
     top: 0;
     font-weight: 700;
     user-select: auto;
@@ -580,16 +690,20 @@ body .carusel:hover .carusel__control-next:not(.hidden){
 }
 
 .auth_page h1,
-.auth_page h2{
+.auth_page h2,
+.pay_page h1,
+.pay_page h2{
     margin-left: 0.1rem;
 }
 
-.auth_page h1{
+.auth_page h1,
+.pay_page h1{
     margin-bottom: 0rem;
     line-height: 1.9rem;
 }
 
-.auth_page h2{
+.auth_page h2,
+.pay_page h2{
     color: #555;
     margin-bottom: 0.5rem;
     font-size: 0.9rem;
@@ -604,7 +718,8 @@ body .carusel:hover .carusel__control-next:not(.hidden){
     box-sizing: border-box;
 }
 
-.auth_page input{
+.auth_page input,
+.pay_page input{
     color: #222;
     background-color: #fff;
     width: 100%;
@@ -619,6 +734,19 @@ body .carusel:hover .carusel__control-next:not(.hidden){
     box-sizing: border-box;
     position: relative;
     display: block;
+}
+
+.pay_page input{
+    height: 2.75rem;
+    padding: 0;
+    text-align: center;
+    font-size: 1.1rem;
+    letter-spacing: 0.25rem;
+}
+
+
+.pay_page input::placeholder{
+    letter-spacing: 0;
 }
 
 .auth_page input[type="checkbox"]{
@@ -638,7 +766,8 @@ body .carusel:hover .carusel__control-next:not(.hidden){
     user-select: none;
 }
 
-.auth_page button{
+.auth_page button,
+.pay_page button{
     width: 100%;
     margin-bottom: 0.5rem;
 }
@@ -703,7 +832,8 @@ body .carusel:hover .carusel__control-next:not(.hidden){
     .header__logo_link,
     .header__user,
     .header__auth,
-    .header__menu{
+    .header__menu,
+    .header__user_menu{
         display: none;
     }
 
